--- a/Chip8Emulator/Chip8Emulator.vcxproj
+++ b/Chip8Emulator/Chip8Emulator.vcxproj
@@ -52,11 +52,13 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Programming\libraries\SFML\bin_static\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>C:\Programming\libraries\SFML\bin_static\lib\openal32.lib;C:\Programming\libraries\SFML\bin_static\lib\sndfile.lib;winmm.lib;opengl32.lib;C:\Programming\libraries\SFML\bin_static\lib\glew.lib;C:\Programming\libraries\SFML\bin_static\lib\freetype.lib;C:\Programming\libraries\SFML\bin_static\lib\jpeg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -67,13 +69,15 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Programming\libraries\SFML\bin_static\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>C:\Programming\libraries\SFML\bin_static\lib\openal32.lib;C:\Programming\libraries\SFML\bin_static\lib\sndfile.lib;winmm.lib;opengl32.lib;C:\Programming\libraries\SFML\bin_static\lib\glew.lib;C:\Programming\libraries\SFML\bin_static\lib\freetype.lib;C:\Programming\libraries\SFML\bin_static\lib\jpeg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
